# wololo

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  TESTING.md  config-examples.yaml  config.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: container-build.yml  container-test.yml
.ungit/: objectives.md
assets/: styles.css
docs/: CONTAINER.md  DEPLOYMENT.md  GUIDE.md
frontend/: discovery.html  index.html
scripts/: release.sh
src/: config.rs  lib.rs  main.rs  routes.rs
tests/: config_tests.rs  device_status_tests.rs  discovery_tests.rs  integration_tests.rs  route_tests.rs
