[package]
name = "wololo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
rust-embed = "8"
axum-embed = "0.1.0"
axum-extra = { version = "0.9.2", features = ["cookie"] }
handlebars = "6.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
wol-rs = "1.1.0"
eui48 = "1.1.0"
serde_json = { version = "1.0.140" }
network-interface = "1.1.4"
ipnet = "2.10.1"
futures = "0.3"
regex = "1"
html-escape = "0.2"
serde_urlencoded = "0.7"
serde_yml = "0.0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
serde_json = "1.0"
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"

[features]
default = []
e2e-tests = []
